--- a/oas3.fetched/components/schemas/VrfUpdateInput.yaml
+++ b/oas3.fetched/components/schemas/VrfUpdateInput.yaml
@@ -1,4 +1,10 @@
 properties:
+  bgp_dynamic_neighbors_enabled:
+    description: Toggle to enable the dynamic bgp neighbors feature on the VRF
+    type: boolean
+  bgp_dynamic_neighbors_export_route_map:
+    description: Toggle to export the VRF route-map to the dynamic bgp neighbors
+    type: boolean
   description:
     type: string
   ip_ranges:
