--- a/oas3.fetched/components/schemas/SpotMarketRequestCreateInput.yaml
+++ b/oas3.fetched/components/schemas/SpotMarketRequestCreateInput.yaml
@@ -11,7 +11,7 @@ properties:
       format: uuid
       type: string
     type: array
-  instance_attributes:
+  instance_parameters:
     properties:
       always_pxe:
         type: boolean
