--- a/oas3.fetched/components/schemas/VirtualCircuit.yaml
+++ b/oas3.fetched/components/schemas/VirtualCircuit.yaml
@@ -1,71 +1,3 @@
-required:
-- bill
-- description
-- id
-- name
-- nni_vlan
-- port
-- project
-- status
-- tags
-- virtual_network
-- vnid
-properties:
-  bill:
-    type: boolean
-    default: false
-    description: True if the Virtual Circuit is being billed. Currently, only Virtual Circuits of Fabric VCs (Metal Billed) will be billed. Usage will start the first time the Virtual Circuit becomes active, and will not stop until it is deleted from Metal.
-  description:
-    type: string
-  id:
-    format: uuid
-    type: string
-  name:
-    type: string
-  nni_vlan:
-    type: integer
-  port:
-    $ref: './Href.yaml'
-  project:
-    $ref: './Href.yaml'
-  speed:
-    description: For Virtual Circuits on shared and dedicated connections, this speed should match the one set on their Interconnection Ports. For Virtual Circuits on
-      Fabric VCs (both Metal and Fabric Billed) that have found their corresponding Fabric connection, this is the actual speed of the interconnection that was configured when setting up the interconnection on the Fabric Portal. 
-      Details on Fabric VCs are included in the specification as a developer preview and is generally unavailable. Please contact our Support team for more details.
-    type: integer
-  status:
-    type: string
-    description: The status of a Virtual Circuit is always 'Pending' on creation. The status can turn to 'Waiting on Customer VLAN' if a Metro VLAN was not set yet on the Virtual Circuit and is the last step needed for full activation. For Dedicated interconnections, as long as the Dedicated Port has been associated 
-      to the Virtual Circuit and a NNI VNID has been set, it will turn to 'Waiting on Customer VLAN'.
-      For Fabric VCs, it will only change to 'Waiting on Customer VLAN' once the corresponding Fabric connection has been found on the Fabric side. Once a Metro VLAN is set on the Virtual Circuit 
-      (which for Fabric VCs, can be set on creation) and the necessary set up is done, it will turn into 'Activating' status as it tries to activate the Virtual Circuit. Once the Virtual Circuit fully activates and is configured on the switch, it will turn to staus 'Active'. For Fabric VCs (Metal Billed), 
-      we will start billing the moment the status of the Virtual Circuit turns to 'Active'. If there are any changes to the VLAN after the Virtual Circuit is in an 'Active' status, the status will show 'Changing VLAN' if a new VLAN has been provided, or 'Deactivating' if we are removing the VLAN. When a 
-      deletion request is issued for the Virtual Circuit, it will move to a 'deleting' status until it is fully deleted. If the Virtual Circuit is on a Fabric VC, it can also change into an 'Expired' status if the associated service token has expired.
-    enum: 
-    - pending
-    - waiting_on_customer_vlan
-    - activating
-    - changing_vlan
-    - deactivating
-    - deleting
-    - active
-    - expired
-    - activation_failed
-    - changing_vlan_failed
-    - deactivation_failed
-    - delete_failed
-  tags:
-    items:
-      type: string
-    type: array
-  virtual_network:
-    $ref: './Href.yaml'
-  vnid:
-    type: integer
-  created_at:
-    format: date-time
-    type: string
-  updated_at:
-    format: date-time
-    type: string
-type: object
+oneOf:
+- $ref: './VlanVirtualCircuit.yaml'
+- $ref: './VrfVirtualCircuit.yaml'
