--- a/oas3.fetched/components/schemas/VirtualCircuitList.yaml
+++ b/oas3.fetched/components/schemas/VirtualCircuitList.yaml
@@ -1,8 +1,6 @@
 properties:
   virtual_circuits:
     items:
-      anyOf:
-      - $ref: './VirtualCircuit.yaml'
-      - $ref: './VrfVirtualCircuit.yaml'
+      $ref: './VirtualCircuit.yaml'
     type: array
 type: object
