--- a/oas3.fetched/paths/projects/project_id/connections.yaml
+++ b/oas3.fetched/paths/projects/project_id/connections.yaml
@@ -9,6 +9,10 @@ get:
     schema:
       format: uuid
       type: string
+  - $ref: '../../../components/parameters/Include.yaml'
+  - $ref: '../../../components/parameters/Exclude.yaml'
+  - $ref: '../../../components/parameters/Page.yaml'
+  - $ref: '../../../components/parameters/PerPage.yaml'
   responses:
     "200":
       content:
