--- a/oas3.fetched/components/schemas/SelfServiceReservationResponse.yaml
+++ b/oas3.fetched/components/schemas/SelfServiceReservationResponse.yaml
@@ -19,7 +19,7 @@ properties:
         enum:
         - 12
         - 36
-        type: number
+        type: integer
       unit:
         enum:
         - monthly
