--- a/oas3.fetched/components/schemas/VrfUpdateInput.yaml
+++ b/oas3.fetched/components/schemas/VrfUpdateInput.yaml
@@ -5,6 +5,9 @@ properties:
   bgp_dynamic_neighbors_export_route_map:
     description: Toggle to export the VRF route-map to the dynamic bgp neighbors
     type: boolean
+  bgp_dynamic_neighbors_bfd_enabled:
+    description: Toggle BFD on dynamic bgp neighbors sessions
+    type: boolean
   description:
     type: string
   ip_ranges:
