--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,12 +2,17 @@ name: Sync
 
 on:
   workflow_dispatch:
-
+env:
+  PYTHON_VERSION: 3.8  
 jobs:
   sync:
     name: Regenerate SDK with latest API spec
     runs-on: ubuntu-latest
     steps:
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ env.PYTHON_VERSION }}
     - name: Get current date
       id: date
       run: echo "date=$(date +'%Y-%m-%d')" >> "$GITHUB_OUTPUT"
