--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -13,6 +13,10 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ env.PYTHON_VERSION }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade PyYAML
+
     - name: Get current date
       id: date
       run: echo "date=$(date +'%Y-%m-%d')" >> "$GITHUB_OUTPUT"
@@ -36,18 +40,18 @@ jobs:
         make stitch-spec
         git add oas3.stitched
         echo `git commit -m 'sync: stitch spec with ${{ steps.date.outputs.date }} spec'`
-    - name: Patch spec and build ./metal_openapi.fixed.yml
+    - name: Patch spec and build ./metal_openapi.fixed.yaml
       id: patch
       if: ${{ always() && steps.stitch.conclusion == 'success' }}
       run: |
-        make patch-spec
-        git add metal_openapi.fixed.yml
+        make patch-spec -o stitch-spec
+        git add metal_openapi.fixed.yaml
         echo `git commit -m 'sync: patch spec with ${{ steps.date.outputs.date }} spec'`
     - name: Generate SDK to ./equinix_metal
       id: generate
       if: ${{ always() && steps.patch.conclusion == 'success' }}
       run: |
-        make generate
+        make generate -o patch-spec -o clean
         git add equinix_metal
         echo `git commit -m 'sync: generate client with ${{ steps.date.outputs.date }} spec'`
     - name: Create Pull Request
