--- a/.github/workflows/ansible-tests-pr.yml
+++ b/.github/workflows/ansible-tests-pr.yml
@@ -50,7 +50,7 @@ jobs:
           python-version: '3.8'
 
       - name: install dependencies
-        run: pip3 install -r requirements-dev.txt -r requirements.txt
+        run: pip3 install -r equinix-metal/requirements.txt
 
       - name: install collection
         run: make install
