--- a/.github/workflows/ansible-tests-pr.yml
+++ b/.github/workflows/ansible-tests-pr.yml
@@ -58,7 +58,7 @@ jobs:
       - name: replace existing keys
         run: rm -rf ~/.ansible/test && mkdir -p ~/.ansible/test && ssh-keygen -m PEM -q -t rsa -N '' -f ~/.ansible/test/id_rsa
 
-      - name: checkout Python SDK, this PR
+      - name: checkout Pyiithon SDK, this PR
         uses: actions/checkout@v4
         with:
           path: /tmp/metal-python
