--- a/.github/workflows/ansible-tests-pr.yml
+++ b/.github/workflows/ansible-tests-pr.yml
@@ -48,7 +48,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.8'
-
+      - name: pwd
+        run: pwd
+      - name: ls
+        run: ls
       - name: install dependencies
         run: pip3 install -r requirements-dev.txt -r requirements.txt
 
