--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,11 @@ jobs:
       run: |
         python -m pip install --upgrade build
 
+    - name: Install dependencies
+      working-directory: ${{ env.PACKAGE_DIR }}
+      run: |
+        python -m pip install pyaml
+
     - name: Build package
       working-directory: ${{ env.PACKAGE_DIR }}
       run: |
