--- a/equinix_metal_t0mk/pyproject.toml
+++ b/equinix_metal_t0mk/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "equinix_metal_t0mk"
-version = ""
+version = "0.7.0"
 description = "Metal API"
 authors = ["Equinix Metal API Team <support@equinixmetal.com>"]
 license = "Equinix Metal"
