--- a/.github/workflows/ansible-tests-pr.yml
+++ b/.github/workflows/ansible-tests-pr.yml
@@ -66,5 +66,5 @@ jobs:
         run: make testall
         working-directory: .ansible/collections/ansible_collections/equinix/cloud
         env:
-          METAL_API_TOKEN: ${{ secrets.METAL_API_TOKEN }}
+          METAL_AUTH_TOKEN: ${{ secrets.METAL_AUTH_TOKEN }}
 
